--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trophy-launch-video",
+  "name": "animation",
   "version": "1.0.0",
   "description": "My Remotion video",
   "repository": {},
@@ -7,13 +7,14 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.298",
+    "@remotion/google-fonts": "^4.0.298",
+    "@remotion/tailwind-v4": "4.0.298",
     "@remotion/zod-types": "4.0.298",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.298",
-    "zod": "3.22.3",
-    "@remotion/tailwind-v4": "4.0.298",
-    "tailwindcss": "4.0.0"
+    "tailwindcss": "4.0.0",
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.298",
