--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@remotion/google-fonts": "^4.0.298",
     "@remotion/tailwind-v4": "4.0.298",
     "@remotion/zod-types": "4.0.298",
+    "lucide-react": "^0.507.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.298",
