--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.507.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remotion": "4.0.298",
     "tailwindcss": "4.0.0",
     "zod": "3.22.3"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.298",
     "@types/react": "19.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/web": "0.0.166",
     "eslint": "9.19.0",
     "prettier": "3.3.3",
