--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dev": "remotion studio",
     "build": "remotion bundle",
     "upgrade": "remotion upgrade",
-    "lint": "eslint src && tsc"
+    "lint": "eslint src && tsc",
+    "generate:thumbnail": "./scripts/generate-thumbnail.sh"
   },
   "sideEffects": [
     "*.css"
